[project]
name = "taxonomic-lineage-viewer"
version = "0.1.0"
description = "Web application for exploring and comparing taxonomic lineages"
readme = "README.md"
dependencies = [
    "flask>=2.3.0",
    "neo4j>=5.28.2",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.31.0",
]
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short", "--strict-markers"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests", 
    "unit: marks tests as unit tests",
]
